--- a/02_lab-aca-hello-world/Makefile
+++ b/02_lab-aca-hello-world/Makefile
@@ -5,4 +5,4 @@ firstdeploy:
 	./deploy/cli/01_deploy_initial.sh
 
 seconddeploy:
-	./deploy/cli/02_deploy_revision
+	./deploy/cli/02_deploy_revision.sh
